# Synthesizable-approXimate-Linear-Algebra-Library-SXLAL-

./: CMakeLists.txt  License.txt  README.md
CMakeLib/cmake/: AddUninstallTarget.cmake
CMakeLib/examples/c/admm/: admm.hpp
CMakeLib/examples/c/admm_lasso/: admm_lasso.hpp  admmlasso_gfloat.cpp  admmlasso_posit16.cpp  admmlasso_posit32.cpp  admmlasso_posit8.cpp  admmlasso_positx.hpp  admmlasso_xfloat.hpp
CMakeLib/examples/c/pgd/: pgd.cpp  pgd_eigend.hpp  pgd_eigenf.hpp  pgd_gdouble.hpp  pgd_gfloat.cpp  pgd_gfloat.hpp  pgd_softposit16.cpp  pgd_softposit16.hpp  pgd_softposit32.cpp  pgd_softposit32.hpp  pgd_softposit8.cpp  pgd_softposit8.hpp  pgd_softpositX.cpp  pgd_softpositX.hpp  pgd_xfloat.cpp  pgd_xfpt.hpp  pgd_xfxpt.cpp  pgd_xfxpt.hpp
CMakeLib/examples/c/xsqrt/: xfxpt_sqrt.hpp
CMakeLib/examples/hls/admmlasso_double/: .project  kernel.cpp
CMakeLib/examples/hls/admmlasso_float/: .cproject  vivado_hls.app
CMakeLib/examples/hls/admmlasso_fxpt/: .project  kernel.hpp
CMakeLib/examples/hls/admmlasso_unum/: .cproject  kernel.hpp  p16_div.cpp  p32_div.cpp  p8_div.cpp  pX1_to_pX2.cpp  s_addMagsP32.cpp  s_subMagsPX2.cpp
CMakeLib/examples/hls/pgd_double/: .vivado_hls_log_all.xml
CMakeLib/examples/hls/pgd_float/: kernel.cpp
CMakeLib/examples/hls/pgd_fxpt/: .cproject  .vivado_hls_log_all.xml  vivado_hls.app
CMakeLib/header/: data.hpp  fpt_algebra.hpp  matplotlibcpp.hpp  softposit_algebra.hpp
CMakeLib/source/: CMakeLists.txt  common.cpp  fft.cpp  fpt_bitwise.cpp  fxpt_bitwise.cpp
EclipseProj/extlib/fxp/: ap_axi_sdata.h  ap_cint.h  ap_common.h  ap_fixed.h  ap_fixed_base.h  ap_int_base.h  ap_utils.h  autopilot_tech.h  clc.h  dsp_builtins.h  floating_point_v7_0_bitacc_cmodel.h  hls_alg.h  hls_all_any_apfixed.h  hls_cbrt_apfixed.h  hls_comparison_apfixed.h  hls_cordic_apfixed.h  hls_dds.h  hls_diff_apfixed.h  hls_dsp.h  hls_erf_apfixed.h  hls_exp_apfixed.h  hls_fft.h  hls_fft_x_complex.h  hls_fir.h  hls_fmod_rem_quo_remainder_divide_apfixed.h  hls_fpo.h  hls_fract_apfixed.h  hls_frexp_apfixed.h  hls_half.h  hls_hotbm_apfixed.h  hls_hypot_apfixed.h  hls_isequal_isnotequal_apfixed.h  hls_ldexp_apfixed.h  hls_lgamma_apfixed.h  hls_linear_algebra.h  hls_log_apfixed.h  hls_mac_pack.h  hls_mad_apfixed.h  hls_math.h  hls_modf_apfixed.h  (+11 more)
EclipseProj/extlib/sp/: c_convertDecToPosit16.cpp  c_convertDecToPosit32.cpp  c_convertDecToPosit8.cpp  c_convertDecToPositX1.cpp  c_convertPosit16ToDec.cpp  c_convertPosit32ToDec.cpp  c_convertPosit8ToDec.cpp  c_convertPositX1ToDec.cpp  c_convertQuire16ToPosit16.cpp  c_convertQuire32ToPosit32.cpp  c_convertQuire8ToPosit8.cpp  c_convertQuireX2ToPositX2.cpp  c_int.cpp  i32_to_p16.cpp  i32_to_p32.cpp  i32_to_p8.cpp  i32_to_pX1.cpp  i32_to_pX2.cpp  i64_to_p16.cpp  i64_to_p32.cpp  i64_to_p8.cpp  i64_to_pX2.cpp  p16_add.cpp  p16_div.cpp  p16_eq.cpp  p16_le.cpp  p16_lt.cpp  p16_mul.cpp  p16_mulAdd.cpp  p16_roundToInt.cpp  p16_sqrt.cpp  p16_sub.cpp  p16_to_i32.cpp  p16_to_i64.cpp  p16_to_p32.cpp  p16_to_p8.cpp  p16_to_pX1.cpp  p16_to_pX2.cpp  p16_to_ui32.cpp  p16_to_ui64.cpp  (+94 more)
EclipseProj/header/comm/: data.hpp  tool.hpp
EclipseProj/header/dsp/: conv.hpp  dct.hpp  fft.hpp  lu.hpp  qrd.hpp  svd.hpp
EclipseProj/header/math/: mathfunc.hpp  matrix.hpp  vector.hpp
EclipseProj/legacy/: fxpt_bitwise.hpp  softapprox.hpp
EclipseProj/source/: common.cpp
References/: links.txt
cmake/: BuildsystemFunctions.cmake  FindEigen.cmake  FindFFTW.cmake
examples/c/admm/: admm.cpp  admm.hpp  admm_ali.cpp  admm_ali.hpp
examples/c/admm_lasso/: admm_lasso.cpp  admm_lasso.hpp  admmlasso_gdouble.cpp  admmlasso_gdouble.hpp  admmlasso_gfloat.hpp  admmlasso_posit16.hpp  admmlasso_posit32.hpp  admmlasso_posit8.hpp  admmlasso_positx.cpp  admmlasso_xfloat.cpp  admmlasso_xfxpt.cpp  admmlasso_xfxpt.hpp
examples/c/mm/: matrix_multiply.cpp  matrix_multiply.hpp  mm.cpp
examples/c/pgd/: pgd.cpp  pgd.hpp  pgd_eigend.cpp  pgd_eigend.hpp  pgd_eigenf.cpp  pgd_eigenf.hpp  pgd_gdouble.cpp  pgd_gdouble.hpp  pgd_gfloat.cpp  pgd_gfloat.hpp  pgd_integer.cpp  pgd_integer.hpp  pgd_softposit16.cpp  pgd_softposit16.hpp  pgd_softposit32.cpp  pgd_softposit32.hpp  pgd_softposit8.cpp  pgd_softposit8.hpp  pgd_test.cpp  pgd_test.hpp  pgd_xfloat.hpp  pgd_xfpt.cpp  pgd_xfxpt.cpp  pgd_xfxpt.hpp
examples/c/xsqrt/: xfxpt_sqrt.cpp  xfxpt_sqrt.hpp
examples/hls/admmlasso_double/: .cproject
examples/hls/admmlasso_fxpt/: .cproject
examples/hls/admmlasso_unum/: .project  .vivado_hls_log_all.xml  c_convertDecToPosit8.cpp  p16_mul.cpp  s_addMagsP16.cpp  s_subMagsP16.cpp  vivado_hls.app
examples/hls/pgd_double/: .project  kernel.cpp  kernel.hpp
examples/hls/pgd_fxpt/: kernel.hpp
examples/hls/pgd_unum/: .cproject  pX1_to_pX2.cpp  pX2_eq.cpp
examples/m/admm/: ADMM_FidelityL2_TV.m  Init.csv  Run.m  S.csv  ffttest.m  xout.csv
examples/m/pgd/: simple_pgd_example.m
header/: common.hpp  data.hpp  eigen_algebra.hpp  fft.hpp  fpt_algebra.hpp  fpt_bitwise.hpp  qrd.hpp  softposit_algebra.hpp  xfxpt.hpp  xfxpt_algebra.hpp  xfxpt_sqrt.hpp  xilinx_fxpt.hpp
header/Xilinx/etc/: ap_private.h
hls/admmlasso_double/: .vivado_hls_log_all.xml  kernel.hpp  vivado_hls.app
hls/admmlasso_float/: .project  .vivado_hls_log_all.xml  kernel.cpp  kernel.hpp
hls/admmlasso_float/.apc/: autopilot.apfmapping
hls/admmlasso_fxpt/: .vivado_hls_log_all.xml  kernel.cpp  vivado_hls.app
hls/admmlasso_fxpt/.apc/: autopilot.apfmapping
hls/admmlasso_unum/: internals.hpp  kernel.cpp  p16_lt.cpp  p32_lt.cpp  pX2_lt.cpp  pX2_mul.cpp  primitives.hpp  s_addMagsP8.cpp  s_addMagsPX2.cpp  softposit.cpp
hls/admmlasso_unum/.apc/: autopilot.apfmapping
hls/pgd_double/: .cproject  vivado_hls.app
hls/pgd_double/.apc/: autopilot.apfmapping
hls/pgd_float/: .cproject  .project  .vivado_hls_log_all.xml  vivado_hls.app
hls/pgd_fxpt/: .project  kernel.cpp
hls/pgd_unum/: .vivado_hls_log_all.xml  kernel.cpp  kernel.hpp  p32_mul.cpp  p8_add.cpp  pX2_sub.cpp  pX2_to_pX1.cpp  softposit.hpp  vivado_hls.app
hls/pgd_unum/.apc/: autopilot.apfmapping
source/: common.cpp  eigen_algebra.cpp  fpt_algebra.cpp  qrd.cpp  xfxpt_algebra.cpp
(+390 files in other folders)
